--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Exlibris">
-        <activity android:name=".AddBookActivity"></activity>
+        <activity android:name=".preferences.PreferenceActivity"></activity>
+        <activity android:name=".AddBookActivity" />
         <activity android:name=".BookActivity" />
         <activity android:name=".SplashScreenActivity">
             <intent-filter>
