Se agrega funcionalidad de agregar libro

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,14 +45,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //Preference
     implementation "androidx.preference:preference-ktx:$preference_version"
 
-
     //Database
     implementation 'com.j256.ormlite:ormlite-core:5.1'
     implementation 'com.j256.ormlite:ormlite-android:5.1'
+
+    //RX
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
 }
