--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_exlibris_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Exlibris">
-        <activity android:name=".ui.RegisterActivity"></activity>
+        <activity android:name=".news.NewsActivity"></activity>
+        <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".EditBookActivity" />
         <activity android:name=".preferences.AboutMeActivity" />
