Se agrega permiso para internet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,13 @@
     <!-- Restringir visibilidad en Google Play solo a dispositivos con camara -->
     <uses-feature
         android:name="android.hardware.camera2"
-        android:required="true" /> <!-- Permisos para utilizacion camara -->
+        android:required="true" />
+    <!-- Permisos para utilizacion camara -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
