Se agrega NewBookActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,10 @@
     <!-- Restringir visibilidad en Google Play solo a dispositivos con camara -->
     <uses-feature
         android:name="android.hardware.camera2"
-        android:required="true" />
-    <!-- Permisos para utilizacion camara -->
+        android:required="true" /> <!-- Permisos para utilizacion camara -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -19,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_exlibris_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Exlibris">
-        <activity android:name=".news.NewsActivity"></activity>
+        <activity android:name=".NewBookActivity"></activity>
+        <activity android:name=".news.NewsActivity" />
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".EditBookActivity" />
